[package]
name = "from-within"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# crate-type = ["cdylib", "rlib"]

[dependencies]
# bevy = { version = "0.9.1", features = ["dynamic"] }
bevy = "0.9.1"
rand = "0.8.5"
# getrandom = { version = "0.2", features = ["js"] }
# wasm-bindgen = "0.2.83"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3



# [profile.wasm-release]
# # Use release profile as default values
# inherits = "release"

# # Optimize with size in mind, also try "s", sometimes it is better.
# # This doesn't increase compilation times compared to -O3, great improvements
# opt-level = "s"

# # Do a second optimization pass removing duplicate or unused code from dependencies.
# # Slows compile times, marginal improvements
# lto = "fat"

# # When building crates, optimize larger chunks at a time
# # Slows compile times, marginal improvements
# codegen-units = 1
